syntax = "proto3";

package my_grpc;

option go_package = "mygrpc/";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 1;
}

message RestaurantLikeStatRequest {
    repeated int32 resIds = 1;
}

message RestaurantLikeStatResponse {
    map<int32, int32> result = 1;
}

service RestaurantLikeSevice {
    rpc GetRestaurantLikeStat(RestaurantLikeStatRequest) returns (RestaurantLikeStatResponse) {};
}
